Date formatting in info header

--- a/digicubes_flask/web/templates/unit/unit.jinja
+++ b/digicubes_flask/web/templates/unit/unit.jinja
@@ -23,8 +23,8 @@
     {{ info.row("Unit Name", unit.name) }}
     {{ info.row("Kurz Beschreibung", md(unit.short_description)) }}
     {{ info.row("Lang Beschreibung", md(unit.long_description)) }}
-    {{ info.row("Angelegt am", unit.created_at) }}
-    {{ info.row("Zuletzt geändert", unit.modified_at) }}
+    {{ info.row("Angelegt am", format_datetime(unit.created_at)) }}
+    {{ info.row("Zuletzt geändert", format_datetime(unit.modified_at)) }}
 </div>
 
 {% endblock %}   
