--- a/digicubes_flask/web/templates/page_base.jinja
+++ b/digicubes_flask/web/templates/page_base.jinja
@@ -8,7 +8,8 @@
         <link href="https://fonts.googleapis.com/css?family=Exo+2:400,500,700&display=swap&subset=latin-ext" rel="stylesheet"> 
         <!--Import materialize.css-->
         <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/materialize.min.css') }}"  media="screen,projection"/>
-        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/digicubes.css') }}"  media="screen,projection"/>        
+        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/digicubes.css') }}"  media="screen,projection"/>
+        <script src="{{ url_for('static', filename='js/moment-with-locales.js') }}"></script>        
         <!--Let browser know website is optimized for mobile-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         {% endblock %}
