--- a/digicubes_flask/web/templates/user/user.jinja
+++ b/digicubes_flask/web/templates/user/user.jinja
@@ -32,6 +32,35 @@ User Details
 <div class="section dc-top">
     <div class="row">
         <div class="col s12">
+            <h2 class="dc-top">Wo ich Lehrer bin</h2>
+            <h3>{{ teacher_schools }}</h3>
+        </div>
+    </div>
+</div>
+
+<div class="section dc-top">
+    <div class="row">
+        <div class="col s12">
+            <h2 class="dc-top">Wo ich Rektor bin</h2>
+            <h3>{{ headmaster_schools }}</h3>
+        </div>
+    </div>
+</div>
+
+<div class="section dc-top">
+    <div class="row">
+        <div class="col s12">
+            <h2 class="dc-top">Wo ich Schüler bin</h2>
+            <h3>{{ student_schools }}</h3>
+        </div>
+    </div>
+</div>
+
+
+
+<div class="section dc-top">
+    <div class="row">
+        <div class="col s12">
             <h2 class="dc-top">Roles</h2>
             <div>
             {% for role in roles %}
