--- a/digicubes_flask/web/templates/headmaster/schools.jinja
+++ b/digicubes_flask/web/templates/headmaster/schools.jinja
@@ -1,9 +1,9 @@
-{% extends "admin/base.jinja" %}
-{% import "macros/menu.jinja" as menu with context %}
+{% extends "headmaster/base.jinja" %}
 
 {% block page_title %}
-Schools Overview
+My Schools
 {% endblock %}
+
 
 {% block main_content %}
 <div class="section">
@@ -68,3 +68,4 @@ Schools Overview
         })
     });
 {% endblock %}
+
