Removed all proxy classes

--- a/digicubes_flask/web/templates/course/create_course.jinja
+++ b/digicubes_flask/web/templates/course/create_course.jinja
@@ -5,7 +5,7 @@
 
   Expected variables:
     - form  : Instance of CreateCourseForm
-    - school: Instance of SchoolProxy. The school, the course should be created
+    - school: Instance of SchoolModel. The school, the course should be created
               for.
   
   Author : FirstKlaas
