--- a/digicubes_flask/web/templates/course/update_course.jinja
+++ b/digicubes_flask/web/templates/course/update_course.jinja
@@ -3,7 +3,7 @@
 
   Expected variables:
     - form  : Instance of EditCourseForm
-    - school: Instance of SchoolProxy. The school, the course should be created
+    - school: Instance of SchoolModel. The school, the course should be created
               for.
   
   Author : FirstKlaas
