Optimized techer display List of teachers associated with school displayed as  a collection. Added a remove icon. Currently without functionality.

--- a/digicubes_flask/web/templates/school/school.jinja
+++ b/digicubes_flask/web/templates/school/school.jinja
@@ -2,6 +2,10 @@
 {% import "macros/menu.jinja" as menu with context %}
 {% import "macros/object_info.jinja" as info %}
 
+{% macro gravatar(email) -%}
+    <img src="{{ email | gravatar }}" alt="" class="circle">
+{%- endmacro %}
+
 {% block page_title %}
 School
 {% endblock %}
@@ -79,7 +83,18 @@ School
     {% if teacher %}
     <div class="row">
         <div class="col s12">
-            {{ teacher }}
+            <ul class="collection">
+            {% for user in teacher %}
+            <li class="collection-item avatar">
+                {{ gravatar(user.email) }}
+                <span class="title">{{ user.login }}</span>
+                <p>{{ user.first_name }} {{user.last_name}}<br>
+                {{ user.email }}
+                </p>
+                <a href="#!" class="secondary-content"><i class="material-icons">delete_sweep</i></a>
+            </li>
+            {% endfor %}
+            </ul>
         </div>
     </div>
     {% else %}
