--- a/digicubes_flask/web/templates/user/user.jinja
+++ b/digicubes_flask/web/templates/user/user.jinja
@@ -30,14 +30,23 @@ User Details
     {{ info.row("Zuletzt eingelogged", to_local_datetime(user.last_login_at, "fromNow()")) }}
 </div>
 
+{% if teacher_schools %}
 <div class="section dc-top">
     <div class="row">
         <div class="col s12">
             <h2 class="dc-top">Wo ich Lehrer bin</h2>
-            <h3>{{ teacher_schools }}</h3>
+            <ul class="collection">
+            {% for school in teacher_schools %}
+            <li class="collection-item avatar">
+                <span class="title"><a href="{{ url_for('school.get', school_id=school.id) }}">{{ school.name }}</a></span>
+                <p>{{ school.description | md }}
+            </li>
+            {% endfor %}
+            </ul>
         </div>
     </div>
 </div>
+{% endif %}
 
 <div class="section dc-top">
     <div class="row">
